@@ -6,14 +6,60 @@
   <name>Cucumber-Book</name>
   <description>Cucumber-Book</description>
   
-  <properties>
+  	<properties>
 		<maven.compiler.version>2.3.2</maven.compiler.version>
-		<selenium.version>2.44.0</selenium.version>
+		<selenium.version>2.42.2</selenium.version>
 		<junit.version>4.11</junit.version>
-		<cucumber.version>1.2.2</cucumber.version>
-  </properties>
+		<cucumber.version>1.1.7</cucumber.version>
+	</properties>
 
-  <dependencies>
+  	<build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.5.1</version>
+                <configuration>
+                    <encoding>UTF-8</encoding>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.14</version>
+                <configuration>
+     				<skip>true</skip>
+   			    </configuration>
+                <executions>
+                    <execution>
+                        <id>acceptance-test</id>
+                        <phase>integration-test</phase>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
+                        <configuration>
+                            <skip>false</skip>
+                            <forkCount>2</forkCount>
+                            <reuseForks>false</reuseForks>
+                            <argLine>-Duser.language=en</argLine>
+                            <argLine>-Xmx1024m</argLine>
+                            <argLine>-XX:MaxPermSize=256m</argLine>
+                            <argLine>-Dfile.encoding=UTF-8</argLine>
+                            <useFile>false</useFile>
+                            <includes>
+                                <include>**/*Test.class</include>
+                            </includes>
+                            <testFailureIgnore>true</testFailureIgnore>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+    
+	<dependencies>
 		<!-- cucumber -->
 		<dependency>
 			<groupId>info.cukes</groupId>
@@ -31,7 +77,7 @@
 		<dependency>
 		  <groupId>io.appium</groupId>
 		  <artifactId>java-client</artifactId>
-		  <version>2.1.0</version>
+		  <version>1.5.0</version>
 		</dependency>
 		<!-- Selenium -->
 		<dependency>
@@ -63,5 +109,6 @@
 		  <artifactId>httpclient</artifactId>
 		  <version>4.3.5</version>
 		</dependency>
-	</dependencies>
+
+    </dependencies>
 </project>
